--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<meta name="google-site-verification" content="hzoPmGT98kBqQGnwxy3ZRToCGkl_wsfj1klnOftdzn4" />
 <!DOCTYPE html>
 <html lang="en">
 <head>
